--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <h1>HTML Tags Cheat Sheet</h1>
     <h2>Headings</h2>
+    <p>
+      Headings from `h1` to `h6` identify blocks and sections. Every page must
+      have one `h1`.
+    </p>
+    <h2>Paragraphs</h2>
+    <p>Paragraphs of text go in `p` tags.</p>
   </body>
 </html>
