--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
     </p>
     <h2>Paragraphs</h2>
     <p>Paragraphs of text go in `p` tags.</p>
+    <h2>Lists</h2>
+    <h3>Unordered Lists</h3>
+    <p>
+      Unordered lists are marked with bullet points and go in `ul` tags. Each
+      list item goes in an `li` tag.
+    </p>
+    <h4>Types of lists:</h4>
+    <ul>
+      <li>Unordered lists (`ul`)</li>
+      <li>Ordered lists (`ol`)</li>
+    </ul>
   </body>
 </html>
