--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML Tags Cheat Sheet</title>
   </head>
   <body>
-    <h1>HTML Tags Cheat Sheet</h1>
+    <h1 id="top-of-the-page">HTML Tags Cheat Sheet</h1>
     <h2>Headings</h2>
     <p>
       Headings from `h1` to `h6` identify blocks and sections. Every page must
@@ -38,5 +38,28 @@
       <li>Carry out the plan</li>
       <li>Go back and improve your solution</li>
     </ol>
+    <h2>Anchors (i.e. links)</h2>
+    <p>
+      Anchor tags create links to other pages. The URL goes in the `href`
+      <a href="https://duckduckgo.com" target="_blank"
+        >Go to DuckDuckGo to search for more information.</a
+      >
+    </p>
+    <p>
+      Setting `target="_blank"` will open the link in a new window. See
+      <a
+        href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a"
+        target="_blank"
+      >
+        MDN</a
+      >
+      for more details.
+    </p>
+    <p>
+      Anchor tags can also create links to a new location on the same page.
+      Instead of putting a URL goes in the "href" attribute, just use the "id"
+      of the element you want to navigate to. This allows you to
+      <a href="#top-of-page"> Jump to the top of the page. </a>
+    </p>
   </body>
 </html>
