Fix Anchor Tag Bug

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML Tags Cheat Sheet</title>
   </head>
   <body>
-    <h1 id="top-of-the-page">HTML Tags Cheat Sheet</h1>
+    <h1 id="top-of-page">HTML Tags Cheat Sheet</h1>
     <h2>Headings</h2>
     <p>
       Headings from `h1` to `h6` identify blocks and sections. Every page must
