Add a table of contents with anchors to each section

--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
   </head>
   <body>
     <h1 id="top-of-page">HTML Tags Cheat Sheet</h1>
-    <h2>Headings</h2>
+    <h2>Table of Contents</h2>
+    <ul>
+      <li><a href="#heading"> Headings </a></li>
+      <li><a href="#paragraphs"> Paragraphs </a></li>
+      <li><a href="#lists"> Lists </a></li>
+      <li><a href="#anchors"> Anchors</a></li>
+      <li><a href="#text-emphasis"> Text Emphasis</a></li>
+      <li><a href="#div-and-span"> Div & Spans</a></li>
+      <li><a href="#br"> Break Line</a></li>
+    </ul>
+    <h2 id="heading">Headings</h2>
     <p>
       Headings from `h1` to `h6` identify blocks and sections. Every page must
       have one `h1`.
     </p>
-    <h2>Paragraphs</h2>
+    <h2 id="paragraphs">Paragraphs</h2>
     <p>Paragraphs of text go in `p` tags.</p>
-    <h2>Lists</h2>
+    <h2 id="lists">Lists</h2>
     <h3>Unordered Lists</h3>
     <p>
       Unordered lists are marked with bullet points and go in `ul` tags. Each
@@ -38,7 +48,7 @@
       <li>Carry out the plan</li>
       <li>Go back and improve your solution</li>
     </ol>
-    <h2>Anchors (i.e. links)</h2>
+    <h2 id="anchors">Anchors (i.e. links)</h2>
     <p>
       Anchor tags create links to other pages. The URL goes in the `href`
       <a href="https://duckduckgo.com" target="_blank"
@@ -61,7 +71,7 @@
       of the element you want to navigate to. This allows you to
       <a href="#top-of-page"> Jump to the top of the page. </a>
     </p>
-    <h2>Text Emphasis</h2>
+    <h2 id="text-emphasis">Text Emphasis</h2>
     <h3>Italic</h3>
     <em>
       The `em` element adds extra emphasis to the text within the opening and
@@ -72,7 +82,7 @@
       You can also use the `strong` element to emphasize text. This shows up as
       bold text in most browsers.
     </strong>
-    <h2>Organizing Content with `div` and `span`</h2>
+    <h2 id="div-and-span">Organizing Content with `div` and `span`</h2>
     <h3>`div`</h3>
     <p>
       The `div` element is a block element, so each `div` will show up on a new
@@ -90,7 +100,7 @@
     <span>2nd span</span>
     <span>3rd span</span>
 
-    <h2>Breaking text using the `br` tag</h2>
+    <h2 id="br">Breaking text using the `br` tag</h2>
     <p>
       Replace with Haiku line 1 (5 syllables)<br />
       Replace with Haiku line 2 (7 syllables)<br />
